# linkedin-sweep

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/linkedin_sweep/: collector.py  demo_data.py  models.py  scoring.py  storage.py
