[project]
name = "linkedin-sweep"
version = "0.1.0"
description = "Local approval-first LinkedIn engagement triage dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.44.0",
  "pandas>=2.2.0",
  "playwright>=1.52.0",
  "pydantic>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
